Sassify form components

--- a/src/scss/utils/mixins/_form.scss
+++ b/src/scss/utils/mixins/_form.scss
@@ -15,5 +15,25 @@
  * limitations under the License.
  */
 
-@import 'button';
-@import 'form';
+@mixin create-input-elements($options) {
+  input[type="email"]#{$options},
+  input[type="number"]#{$options},
+  input[type="search"]#{$options},
+  input[type="text"]#{$options},
+  input[type="tel"]#{$options},
+  input[type="url"]#{$options},
+  input[type="password"]#{$options},
+  textarea#{$options},
+  select#{$options} {
+    @content
+  }
+}
+
+@mixin create-checkradio($options) {
+  input {
+    &[type='checkbox']#{$options},
+    &[type='radio']#{$options} {
+      @content
+    }
+  }
+}
