Sassify "navbar" component

--- a/src/scss/utils/variables/_colors.scss
+++ b/src/scss/utils/variables/_colors.scss
@@ -50,6 +50,11 @@ $sidenav-lines-color:              #818181;
 
 $footer-color-background:          #111;
 
+$navbar-color-button-active:       $footer-color-background;
+$navbar-color-logo:                $text-color;
+$navbar-color-logo-hover:          #f5f5f5;
+$navbar-color-dropdown-button-bg:  #444;
+
 $form-color-background:            $text-color;
 $form-color-border:                #d1d1d1;
 $form-color-disabled:              #b1b1b1;
