--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -15,149 +15,143 @@
  * limitations under the License.
  */
 
-/* General attributes */
-
-nav, .nav {
+nav,
+.nav {
   height: 0;
+
+  /* Fixed Navbar properties */
+  .fixed {
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+  }
+
+  ul {
+    background-color: $meshki-black;
+    border-bottom: 2px solid $text-color;
+    list-style-type: none;
+    margin-top: 0;
+    overflow: hidden;
+    padding: 0;
+    width: 100%;
+    z-index: 1;
+
+    /* Elements in the navbar start from the left side */
+    li {
+      float: left;
+      margin-bottom: 0;
+
+      /* Anchors inside lists' attributes */
+      & > a {
+        color: $text-color;
+        display: inline-block;
+        padding: 14px 16px;
+        text-align: center;
+        text-decoration: none;
+        transition: background-color .2s ease-in-out;
+      }
+
+      /*
+       * Change the link color to #111 (black) on hover
+       * Only direct children are affected, which means it excludes dropdowns
+       */
+      & > a:hover {
+        background-color: $navbar-color-button-active;
+      }
+
+      /* Buttons positioning on navbar */
+      & > a.button,
+      & > button,
+      & > input {
+        margin: 7px 5px auto !important;
+      }
+
+      /* Active navbar button */
+      & > a.active {
+        background-color: $navbar-color-button-active;
+      }
+
+      /* Logo of the website, it must be the first child of navbar*/
+      &:first-child a.logo {
+        background-color: $navbar-color-logo;
+        color: $normal-black;
+      }
+
+      /* Lighten the logo when the mouse is over it */
+      &:first-child a.logo:hover {
+        background-color: $navbar-color-logo-hover;
+        color: $normal-black;
+      }
+    }
+  }
 }
 
-nav ul,
-.nav ul {
-  width: 100%;
-  background-color: #222;
-  border-bottom: 2px solid #E1E1E1;
-  padding: 0;
-  margin-top: 0px;
-  list-style-type: none;
-  overflow: hidden;
-  z-index: 1;
+li {
+  /* Send the elements to the right side with nav-right */
+  &.nav-right {
+    float: right !important;
+    position: inherit;
+  }
+
+  /* Send the elements to the left side with nav-left */
+  &.nav-left {
+    float: left !important;
+    position: inherit;
+  }
+
+  /* Fix for #2 issue, where nav-dropdown-content would go off the screen. */
+  &.nav-dropdown.nav-right .nav-dropdown-content {
+    right: 0;
+  }
+
+  &.nav-dropdown.nav-right ~ .nav-dropdown .nav-dropdown-content {
+    right: auto;
+  }
+
+  /* Navigation Dropdown Button */
+  &.nav-dropdown {
+    display: inline-block;
+
+    /* Dropdown content attributes */
+    .nav-dropdown-content {
+      background-color: $navbar-color-button-active;
+      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, .2);
+      display: block;
+      min-width: 160px;
+      opacity: 0;
+      position: absolute;
+      transition: visibility .2s, opacity .2s ease-in-out;
+      visibility: hidden;
+      z-index: 1;
+    }
+
+    /* Each link in dropdown's content */
+    .nav-dropdown-content a {
+      color: $text-color;
+      display: block;
+      padding: 12px 16px;
+      text-align: left;
+      text-decoration: none;
+    }
+
+    /* When the mouse is on each option */
+    .nav-dropdown-content a:hover {
+      background-color: $navbar-color-dropdown-button-bg;
+    }
+  }
 }
 
-/* Fixed Navbar properties */
-nav.fixed,
-.nav.fixed {
-  position: fixed;
-  width: 100%;
-  z-index: 1;
-}
+.nav-dropdown {
+  &:hover {
+    /* When the dropdown is open, change the color of dropdown's button */
+    .nav-dropdown-button {
+      background-color: $navbar-color-button-active;
+    }
 
-/* Elements in the navbar start from the left side */
-nav ul li,
-.nav ul li {
-  float: left;
-  margin-bottom: 0px;
-}
-
-/* Anchors inside lists' attributes */
-nav ul li > a,
-.nav ul li > a {
-  display: inline-block;
-  color: #E1E1E1;
-  padding: 14px 16px;
-  text-align: center;
-  text-decoration: none;
-  transition: background-color .2s ease-in-out;
-}
-
-/* Buttons positioning on navbar */
-nav ul li > a.button,
-nav ul li > button,
-nav ul li > input,
-.nav ul li > a.button,
-.nav ul li > button,
-.nav ul li > input {
-  margin: 7px 5px auto 5px !important;
-}
-
-/* Active navbar button */
-nav ul li > a.active,
-.nav ul li > a.active {
-  background-color: #111;
-}
-
-/* Logo of the website, it must be the first child of navbar*/
-nav ul li:first-child a.logo,
-.nav ul li:first-child a.logo {
-  background-color: #E1E1E1;
-  color: black;
-}
-
-/* Lighten the logo when the mouse is over it */
-nav ul li:first-child a.logo:hover,
-.nav ul li:first-child a.logo:hover {
-  background-color: #F5F5F5;
-  color: black;
-}
-
-/**
- * Change the link color to #111 (black) on hover
- * Only direct children are affected, which means it excludes dropdowns
- */
-nav ul li > a:hover,
-.nav ul li > a:hover {
-  background-color: #111;
-}
-
-/* Send the elements to the right side with nav-right */
-li.nav-right {
-  position: inherit;
-  float: right !important;
-}
-
-/* Send the elements to the left side with nav-left */
-li.nav-left {
-  position: inherit;
-  float: left !important;
-}
-
-/* Fix for #2 issue, where nav-dropdown-content would go off the screen. */
-li.nav-dropdown.nav-right .nav-dropdown-content {
-  right: 0;
-}
-
-li.nav-dropdown.nav-right ~ .nav-dropdown .nav-dropdown-content {
-  right: auto;
-}
-
-/* Navigation Dropdown Button */
-li.nav-dropdown {
-  display: inline-block;
-}
-
-/* Dropdown content attributes */
-.nav-dropdown-content {
-  display: block;
-  visibility: hidden;
-  opacity: 0;
-  position: absolute;
-  min-width: 160px;
-  background-color: #111;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  transition: visibility .2s, opacity .2s ease-in-out;
-}
-
-/* Each link in dropdown's content */
-.nav-dropdown-content a {
-  display: block;
-  color: #E1E1E1;
-  padding: 12px 16px;
-  text-decoration: none;
-  text-align: left;
-}
-
-/* When the mouse is on each option */
-.nav-dropdown-content a:hover {
-  background-color: #444;
-}
-
-/* When the dropdown is open, change the color of dropdown's button */
-.nav-dropdown:hover .nav-dropdown-button {
-  background-color: #111;
-}
-
-/* Display the content when the mouse is on dropdown's button */
-.nav-dropdown:hover .nav-dropdown-content {
-  visibility: visible;
-  opacity: 1;
+    /* Display the content when the mouse is on dropdown's button */
+    .nav-dropdown-content {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
 }
