--- a/src/scss/utils/variables/_colors.scss
+++ b/src/scss/utils/variables/_colors.scss
@@ -46,7 +46,9 @@ $button-color-orange-active:       #c16819;
 $link-color-default:               $button-default-color;
 $link-color-hover:                 #74c1fb;
 
-$sidenav-lines-color:              #818181;
+$sidenav-color-bg:                 #000;
+$sidenav-color-links:              #818181;
+$sidenav-color-overlay:            #000;
 
 $footer-color-background:          #111;
 
