--- a/src/scss/utils/variables/_colors.scss
+++ b/src/scss/utils/variables/_colors.scss
@@ -64,3 +64,7 @@ $form-color-disabled-text:         #444;
 $form-color-border:                #33bbf0;
 $form-checkradio-color:            #33bbf0;
 $form-color-placeholder:           #6a6a6a;
+
+$table-color-border:               #7c7c7c;
+$table-color-striped:              #2f2f2f;
+$table-color-hover:                #404040;
