--- a/src/scss/utils/mixins/_typography.scss
+++ b/src/scss/utils/mixins/_typography.scss
@@ -15,6 +15,8 @@
  * limitations under the License.
  */
 
-@import 'button';
-@import 'form';
-@import 'typography';
+@mixin heading-styler($font-size, $line-height, $letter-spacing) {
+  font-size: $font-size;
+  letter-spacing: $letter-spacing;
+  line-height: $line-height;
+}
