--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,7 @@
 
 @import 'utils/variables/module';
 @import 'utils/mixins/module';
+@import 'utils/functions/module';
 
 @import 'utils/module';
 @import 'vendor/module';
