--- a/src/scss/utils/variables/_layout.scss
+++ b/src/scss/utils/variables/_layout.scss
@@ -15,13 +15,15 @@
  * limitations under the License.
  */
 
-$container-max-width:      960px;
-$container-width-mobile:   100%;
-$container-width-phablet:  85%;
-$container-width-tablet:   80%;
+$content-max-width:      960px;
+$content-width-mobile:   100%;
+$content-width-phablet:  85%;
+$content-width-tablet:   80%;
 
 $media-mobile:             400px;
 $media-phablet:            544px;
 $media-tablet:             768px;
 $media-desktop:            992px;
 $media-desktop-hd:         1200px;
+
+$col-margin: 4%;
