Sassify "rtl" plugin

--- a/src/scss/plugins/_module.scss
+++ b/src/scss/plugins/_module.scss
@@ -15,5 +15,5 @@
  * limitations under the License.
  */
 
-@import 'rtl';
-@import 'extra-button-colors';
+@import 'rtl/main';
+@import 'extra-button-colors/main';
