--- a/src/scss/plugins/extra-button-colors/main.scss
+++ b/src/scss/plugins/extra-button-colors/main.scss
@@ -15,250 +15,156 @@
  * limitations under the License.
  */
 
+@import 'colors';
+
 /* Yellow button */
-a.button.yellow,
-button.yellow,
-input[type="submit"].yellow,
-input[type="reset"].yellow,
-input[type="button"].yellow {
-  border: 2px #f9f300 solid;
-  color: #f9f300;
+@include create-button('.yellow') {
+  border: 2px $x-button-color-yellow solid;
+  color: $x-button-color-yellow;
 }
 
 /* Yellow button's hover */
-a.button.yellow:hover,
-button.yellow:hover,
-input[type="submit"].yellow:hover,
-input[type="reset"].yellow:hover,
-input[type="button"].yellow:hover {
-  background-color: #f9f300;
-  border-color: #f9f300;
-  color: #000;
+@include create-button('.yellow:hover') {
+  background-color: $x-button-color-yellow;
+  border-color: $x-button-color-yellow;
+  color: $meshki-black;
 }
 
 /* Yellow button's active */
-a.button.yellow:active,
-button.yellow:active,
-input[type="submit"].yellow:active,
-input[type="reset"].yellow:active,
-input[type="button"].yellow:active {
-  background-color: #bfbb1a;
-  border-color: #bfbb1a;
+@include create-button('.yellow:active') {
+  background-color: $x-button-color-yellow-active;
+  border-color: $x-button-color-yellow-active;
 }
 
 /* Crimson button */
-a.button.crimson,
-button.crimson,
-input[type="submit"].crimson,
-input[type="reset"].crimson,
-input[type="button"].crimson {
-  border: 2px #9a0000 solid;
-  color: #9a0000;
+@include create-button('.crimson') {
+  border: 2px $x-button-color-crimson solid;
+  color: $x-button-color-crimson;
 }
 
 /* Crimson button's hover */
-a.button.crimson:hover,
-button.crimson:hover,
-input[type="submit"].crimson:hover,
-input[type="reset"].crimson:hover,
-input[type="button"].crimson:hover {
-  background-color: #9a0000;
-  border-color: #9a0000;
-  color: #fff;
+@include create-button('.crimson:hover') {
+  background-color: $x-button-color-crimson;
+  border-color: $x-button-color-crimson;
+  color: $text-color;
 }
 
 /* Crimson button's active */
-a.button.crimson:active,
-button.crimson:active,
-input[type="submit"].crimson:active,
-input[type="reset"].crimson:active,
-input[type="button"].crimson:active {
-  background-color: #6f0606;
-  border-color: #6f0606;
+@include create-button('.crimson:active') {
+  background-color: $x-button-color-crimson-active;
+  border-color: $x-button-color-crimson-active;
 }
 
 /* Purple button */
-a.button.purple,
-button.purple,
-input[type="submit"].purple,
-input[type="reset"].purple,
-input[type="button"].purple {
-  border: 2px #9C27B0 solid;
-  color: #9C27B0;
+@include create-button('.purple') {
+  border: 2px $x-button-color-purple solid;
+  color: $x-button-color-purple;
 }
 
 /* Purple button's hover */
-a.button.purple:hover,
-button.purple:hover,
-input[type="submit"].purple:hover,
-input[type="reset"].purple:hover,
-input[type="button"].purple:hover {
-  background-color: #9C27B0;
-  border-color: #9C27B0;
-  color: #fff;
+@include create-button('.purple:hover') {
+  background-color: $x-button-color-purple;
+  border-color: $x-button-color-purple;
+  color: $text-color;
 }
 
 /* Purple button's active */
-a.button.purple:active,
-button.purple:active,
-input[type="submit"].purple:active,
-input[type="reset"].purple:active,
-input[type="button"].purple:active {
-  background-color: #7B1FA2;
-  border-color: #7B1FA2;
+@include create-button('.purple:active') {
+  background-color: $x-button-color-purple-active;
+  border-color: $x-button-color-purple-active;
 }
 
 /* Lime button */
-a.button.lime,
-button.lime,
-input[type="submit"].lime,
-input[type="reset"].lime,
-input[type="button"].lime {
-  border: 2px #C0CA33 solid;
-  color: #C0CA33;
+@include create-button('.lime') {
+  border: 2px $x-button-color-lime solid;
+  color: $x-button-color-lime;
 }
 
 /* Lime button's hover */
-a.button.lime:hover,
-button.lime:hover,
-input[type="submit"].lime:hover,
-input[type="reset"].lime:hover,
-input[type="button"].lime:hover {
-  background-color: #C0CA33;
-  border-color: #C0CA33;
-  color: #000;
+@include create-button('.lime:hover') {
+  background-color: $x-button-color-lime;
+  border-color: $x-button-color-lime;
+  color: $meshki-black;
 }
 
 /* Lime button's active */
-a.button.lime:active,
-button.lime:active,
-input[type="submit"].lime:active,
-input[type="reset"].lime:active,
-input[type="button"].lime:active {
-  background-color: #9E9D24;
-  border-color: #9E9D24;
+@include create-button('.lime:active') {
+  background-color: $x-button-color-lime-active;
+  border-color: $x-button-color-lime-active;
 }
 
 /* Brown button */
-a.button.brown,
-button.brown,
-input[type="submit"].brown,
-input[type="reset"].brown,
-input[type="button"].brown {
-  border: 2px #8D6E63 solid;
-  color: #8D6E63;
+@include create-button('.brown') {
+  border: 2px $x-button-color-brown solid;
+  color: $x-button-color-brown;
 }
 
 /* Brown button's hover */
-a.button.brown:hover,
-button.brown:hover,
-input[type="submit"].brown:hover,
-input[type="reset"].brown:hover,
-input[type="button"].brown:hover {
-  background-color: #8D6E63;
-  border-color: #8D6E63;
-  color: #fff;
+@include create-button('.brown:hover') {
+  background-color: $x-button-color-brown;
+  border-color: $x-button-color-brown;
+  color: $text-color;
 }
 
 /* Brown button's active */
-a.button.brown:active,
-button.brown:active,
-input[type="submit"].brown:active,
-input[type="reset"].brown:active,
-input[type="button"].brown:active {
-  background-color: #6D4C41;
-  border-color: #6D4C41;
+@include create-button('.brown:active') {
+  background-color: $x-button-color-brown-active;
+  border-color: $x-button-color-brown-active;
 }
 
 /* Space button */
-a.button.space,
-button.space,
-input[type="submit"].space,
-input[type="reset"].space,
-input[type="button"].space {
-  border: 2px #607D8B solid;
-  color: #607D8B;
+@include create-button('.space') {
+  border: 2px $x-button-color-space solid;
+  color: $x-button-color-space;
 }
 
 /* Space button's hover */
-a.button.space:hover,
-button.space:hover,
-input[type="submit"].space:hover,
-input[type="reset"].space:hover,
-input[type="button"].space:hover {
-  background-color: #607D8B;
-  border-color: #607D8B;
-  color: #fff;
+@include create-button('.space:hover') {
+  background-color: $x-button-color-space;
+  border-color: $x-button-color-space;
+  color: $text-color;
 }
 
 /* Space button's active */
-a.button.space:active,
-button.space:active,
-input[type="submit"].space:active,
-input[type="reset"].space:active,
-input[type="button"].space:active {
-  background-color: #455A64;
-  border-color: #455A64;
+@include create-button('.space:active') {
+  background-color: $x-button-color-space-active;
+  border-color: $x-button-color-space-active;
 }
 
 /* Rose button */
-a.button.rose,
-button.rose,
-input[type="submit"].rose,
-input[type="reset"].rose,
-input[type="button"].rose {
-  border: 2px #E91E63 solid;
-  color: #E91E63;
+@include create-button('.rose') {
+  border: 2px $x-button-color-rose solid;
+  color: $x-button-color-rose;
 }
 
 /* Rose button's hover */
-a.button.rose:hover,
-button.rose:hover,
-input[type="submit"].rose:hover,
-input[type="reset"].rose:hover,
-input[type="button"].rose:hover {
-  background-color: #E91E63;
-  border-color: #E91E63;
-  color: #fff;
+@include create-button('.rose:hover') {
+  background-color: $x-button-color-rose;
+  border-color: $x-button-color-rose;
+  color: $text-color;
 }
 
 /* Rose button's active */
-a.button.rose:active,
-button.rose:active,
-input[type="submit"].rose:active,
-input[type="reset"].rose:active,
-input[type="button"].rose:active {
-  background-color: #C2185B;
-  border-color: #C2185B;
+@include create-button('.rose:active') {
+  background-color: $x-button-color-rose-active;
+  border-color: $x-button-color-rose-active;
 }
 
 /* Cyan button */
-a.button.cyan,
-button.cyan,
-input[type="submit"].cyan,
-input[type="reset"].cyan,
-input[type="button"].cyan {
-  border: 2px #00E5FF solid;
-  color: #00E5FF;
+@include create-button('.cyan') {
+  border: 2px $x-button-color-cyan solid;
+  color: $x-button-color-cyan;
 }
 
 /* Cyan button's hover */
-a.button.cyan:hover,
-button.cyan:hover,
-input[type="submit"].cyan:hover,
-input[type="reset"].cyan:hover,
-input[type="button"].cyan:hover {
-  background-color: #00E5FF;
-  border-color: #00E5FF;
-  color: #000;
+@include create-button('.cyan:hover') {
+  background-color: $x-button-color-cyan;
+  border-color: $x-button-color-cyan;
+  color: $meshki-black;
 }
 
 /* Cyan button's active */
-a.button.cyan:active,
-button.cyan:active,
-input[type="submit"].cyan:active,
-input[type="reset"].cyan:active,
-input[type="button"].cyan:active {
-  background-color: #00B8D4;
-  border-color: #00B8D4;
+@include create-button('.cyan:active') {
+  background-color: $x-button-color-cyan-active;
+  border-color: $x-button-color-cyan-active;
 }
